// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`serializeToRuntimeReadyProject > omits compiled config when no config blocks are present 1`] = `
{
  "codeBlocks": [],
  "compiledModules": {},
  "compiledProjectConfig": {
    "binaryAssets": [],
    "disableAutoCompilation": false,
    "memorySizeBytes": 1048576,
    "runtimeSettings": {
      "runtime": "WebWorkerLogicRuntime",
      "sampleRate": 50,
    },
  },
  "viewport": {
    "gridCoordinates": {
      "x": 0,
      "y": 0,
    },
  },
}
`;

exports[`serializeToRuntimeReadyProject > serializes runtime-ready project with compiled config 1`] = `
{
  "codeBlocks": [
    {
      "code": [
        "config project",
        "memorySizeBytes 65536",
        "configEnd",
      ],
    },
  ],
  "compiledModules": {
    "mod": {},
  },
  "compiledProjectConfig": {
    "binaryAssets": [],
    "disableAutoCompilation": false,
    "memorySizeBytes": 65536,
    "runtimeSettings": {
      "runtime": "WebWorkerLogicRuntime",
      "sampleRate": 50,
    },
  },
  "viewport": {
    "gridCoordinates": {
      "x": 0,
      "y": 0,
    },
  },
}
`;
